--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,37 @@
-<app-navbar></app-navbar>
-<p>home works!</p>
+<!--<p [style.color]="color">home works!</p>
+<p>{{profile.firstName}}</p>
+<p>{{profile.lastName}}</p>
+<img src="{{linkImage}}">
+<p>{{number}}</p>
+<button (click)="Iclick()">Increment</button>
+<button (click)="DClick()">Decrement</button>
+
+<h1>{{number}}</h1>
+<input type="text" [(ngModel)]="number">
+
+<p *ngIf="verify">Hi</p>
+-->
+<!--<p [ngStyle]="{'color':'blue'}">عمو سامي</p>
+<div *ngFor="let item of array">
+    <p>{{item}}</p>
+</div>
+<p [ngClass]="'Taha'">HHHHH</p>
+<div [ngSwitch]="number">
+    <p *ngSwitchCase="1">{{profile.lastName}}</p>
+    <p *ngSwitchCase="2">gg</p>
+</div>-->
+<!--<p>{{profile.lastName | uppercase}}</p>
+<p>{{profile | json}}</p>
+<p>{{number | currency : 'USD'}}</p>-->
+<p>home</p>
+
+
+
+
+
+
+
+
+
+
+
